[package]
name = "argon2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "argon2_rs"
crate-type = ["cdylib"]

[dependencies]
argon2 = {version = "0.5.2", features = ["password-hash"]}
pyo3 = "0.19.0"
rand_core = {version = "0.6.4", features = ["getrandom"]}
